src/test/compile-fail/multiple_field_instantiations.mmtn
// { "compile_status": "fail" }

struct Foo {
    bar: u64,
}

fn main() -> u64 {
    let foo = Foo { bar: 0, bar: 1 };
    0
}
